# Alias2k-Project

./: Cargo.toml
backend/: Cargo.toml
backend/migrations/: 20231031080625_secret.sql  20231204112246_token.sql  20231205091438_token.sql  20231206095312_token.sql  20231221093127_user.sql
backend/src/: main.rs
backend/src/endpoints/: authentication.rs  mod.rs  secrets.rs  sign_in.rs  users.rs
backend/src/middlewares/: layer.rs  secret.rs  token.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-astro/: package-lock.json  package.json
frontend-astro/src/components/: AsyncUserFetch.tsx  Footer.astro  Header.astro  QueryPanel.tsx
frontend-astro/src/layouts/: Layout.astro
frontend-astro/src/pages/: index.astro
frontend-vite/: package-lock.json  package.json
frontend-vite/frontend/src/: NewUser.tsx  Todos.tsx  USER_SCHEMA.tsx  User.css  User.tsx  Users.css  Users.tsx  main.tsx
frontend/cypress/support/: component.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  todos.ts  users.ts
frontend/src/assets/: base.css
frontend/src/components/: CompletedTodoCheckBox.vue  DeleteUserModal.vue  EditUserComponent.vue  FooterUser.vue  HeaderUser.vue  TodoModal.vue  UserInfo.vue
frontend/src/plugins/: session.ts
frontend/src/router/: index.ts
frontend/src/stores/: token.ts
frontend/src/views/: DeleteUser.vue  EditUser.vue  HomeUser.vue  (+5 more)
migrations/: 20231024083404_user.sql  20231026123658_todo.sql
src/: main.rs
src/endpoints/: mod.rs  todos.rs  users.rs
src/middlewares/: layer.rs
(+2 files in other folders)
