[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
axum = { version = "0.6.20", features = ["headers"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
headers = "0.3.9"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.4.0", features = ["chrono", "json"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "mysql",
    "sqlx-mysql",
    "chrono",
] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing-subscriber = { version = "0.3.17", features = [
    "serde",
    "serde_json",
    "tracing",
] }
uuid = { version = "1.5.0", features = ["v4"] }
